tests/negative-fixtures/banned_instant_alias/src/lib.rs
use std::time::Instant as WallInstant;

pub fn wall_instant_now() -> WallInstant {
    WallInstant::now()
}
